--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./VENDERS/fonts/all.min.css">
-    <link rel="stylesheet" href="./ASSETS/css/main.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./ASSETS/css/main.css" id="stylesheetChange">
+    <title>NFTS</title>
 </head>
 <body>
     <header>
@@ -53,13 +53,14 @@
             <h2>World’s fast growing NFTs bazar based on collectible NFTs. </h2>
             <div class="btn"><button>view collection <i class="fa-solid" fa-right-long></i></button></div>
           </div>
-          <div class="img_Black"><img src="./ASSETS/photo/pngegg.png" alt="#"></div>
+          <div class="img_Black"><img src="./ASSETS/photo/pngegg.png" alt="#" id="b_image"></div>
         </div>
       </div>
     </main>   
     <div class="blackMode">
-      <a href="#"><i class="fa-regular fa-moon"></i></a>
+      <i class="fa-regular fa-moon" id="blackBtn" ></i>
     </div> 
+    <script src="./ASSETS/javaScript/js.js"></script>
     
 </body>
 </html>
